[GStreamer] Multi-channel (>2) support for the AudioFileReader https://bugs.webkit.org/show_bug.cgi?id=215255

Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

The audio file reader used to handle up to stereo audio layouts. It can now handle up to 5.1
surround layouts. This patch also modernizes the coding style of this module in various
parts.

* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(WebCore::initializeDebugCategory):
(WebCore::AudioFileReader::handleSample):
(WebCore::AudioFileReader::handleMessage):
(WebCore::AudioFileReader::handleNewDeinterleavePad):
(WebCore::AudioFileReader::plugDeinterleave):
(WebCore::AudioFileReader::decodeAudioForBusCreation):
(WebCore::AudioFileReader::createBus):
(WebCore::createBusFromAudioFile):
(WebCore::createBusFromInMemoryAudioFile):

LayoutTests:

* platform/glib/TestExpectations: audiobuffersource-multi-channels.html is now passing.
* platform/glib/webaudio/codec-tests/aac/vbr-128kbps-44khz-expected.wav: Added.
* platform/glib/webaudio/codec-tests/vorbis/vbr-128kbps-44khz-expected.wav: Added.
* platform/glib/webaudio/codec-tests/vorbis/vbr-70kbps-44khz-expected.wav: Added.
* platform/glib/webaudio/codec-tests/vorbis/vbr-96kbps-44khz-expected.wav: Added.
* platform/glib/webaudio/codec-tests/wav/24bit-22khz-resample-expected.wav: Added.
* platform/gtk/webaudio/codec-tests/aac/vbr-128kbps-44khz-expected.wav: Removed.
* platform/gtk/webaudio/codec-tests/mp3/128kbps-44khz-expected.wav: Removed.
* platform/gtk/webaudio/codec-tests/vorbis/vbr-128kbps-44khz-expected.wav: Removed.
* platform/gtk/webaudio/codec-tests/vorbis/vbr-70kbps-44khz-expected.wav: Removed.
* platform/gtk/webaudio/codec-tests/vorbis/vbr-96kbps-44khz-expected.wav: Removed.
* platform/gtk/webaudio/codec-tests/wav/24bit-44khz-expected.wav: Removed.

Canonical link: https://commits.webkit.org/230985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269104 268f45cc-cd09-0410-ab3c-d52691b4dbfc