Source/WebCore/platform/audio/gstreamer/AudioFileReaderGStreamer.cpp
@@ -18,25 +18,36 @@
  */
 
 #include "config.h"
+#include "AudioFileReader.h"
 
 #if ENABLE(WEB_AUDIO)
 
-#include "AudioFileReader.h"
 #include "AudioBus.h"
-#include "GRefPtrGStreamer.h"
+#include "GStreamerCommon.h"
 #include <gio/gio.h>
 #include <gst/app/gstappsink.h>
 #include <gst/audio/audio-info.h>
 #include <gst/gst.h>
 #include <wtf/MainThread.h>
 #include <wtf/Noncopyable.h>
+#include <wtf/PrintStream.h>
 #include <wtf/RunLoop.h>
 #include <wtf/Threading.h>
 #include <wtf/WeakPtr.h>
-#include <wtf/glib/GRefPtr.h>
-#include <wtf/glib/GUniquePtr.h>
+#include <wtf/text/StringConcatenateNumbers.h>
 
 namespace WebCore {
+
+GST_DEBUG_CATEGORY(webkit_audio_file_reader_debug);
+#define GST_CAT_DEFAULT webkit_audio_file_reader_debug
+
+static void initializeDebugCategory()
+{
+    static std::once_flag onceFlag;
+    std::call_once(onceFlag, [] {
+        GST_DEBUG_CATEGORY_INIT(webkit_audio_file_reader_debug, "webkitaudiofilereader", 0, "WebKit WebAudio FileReader");
+    });
+}
 
 class AudioFileReader : public CanMakeWeakPtr<AudioFileReader> {
     WTF_MAKE_FAST_ALLOCATED;
@@ -64,12 +75,9 @@ private:
     const void* m_data { nullptr };
     size_t m_dataSize { 0 };
     const char* m_filePath { nullptr };
-
     float m_sampleRate { 0 };
     int m_channels { 0 };
-    GRefPtr<GstBufferList> m_frontLeftBuffers;
-    GRefPtr<GstBufferList> m_frontRightBuffers;
-
+    HashMap<int, GRefPtr<GstBufferList>> m_buffers;
     GRefPtr<GstElement> m_pipeline;
     unsigned m_channelSize { 0 };
     GRefPtr<GstElement> m_decodebin;
@@ -77,12 +85,12 @@ private:
     bool m_errorOccurred { false };
 };
 
-static void copyGstreamerBuffersToAudioChannel(GstBufferList* buffers, AudioChannel* audioChannel)
+static void copyGstreamerBuffersToAudioChannel(const GRefPtr<GstBufferList>& buffers, AudioChannel* audioChannel)
 {
     float* destination = audioChannel->mutableData();
-    unsigned bufferCount = gst_buffer_list_length(buffers);
+    unsigned bufferCount = gst_buffer_list_length(buffers.get());
     for (unsigned i = 0; i < bufferCount; ++i) {
-        GstBuffer* buffer = gst_buffer_list_get(buffers, i);
+        GstBuffer* buffer = gst_buffer_list_get(buffers.get(), i);
         ASSERT(buffer);
         gsize bufferSize = gst_buffer_get_size(buffer);
         gst_buffer_extract(buffer, 0, destination, bufferSize);
@@ -142,9 +150,9 @@ AudioFileReader::~AudioFileReader()
 
 GstFlowReturn AudioFileReader::handleSample(GstAppSink* sink)
 {
-    GRefPtr<GstSample> sample = adoptGRef(gst_app_sink_pull_sample(sink));
+    auto sample = adoptGRef(gst_app_sink_try_pull_sample(sink, 0));
     if (!sample)
-        return GST_FLOW_ERROR;
+        return gst_app_sink_is_eos(sink) ? GST_FLOW_EOS : GST_FLOW_ERROR;
 
     GstBuffer* buffer = gst_sample_get_buffer(sample.get());
     if (!buffer)
@@ -154,25 +162,46 @@ GstFlowReturn AudioFileReader::handleSample(GstAppSink* sink)
     if (!caps)
         return GST_FLOW_ERROR;
 
+    int channelId = 0;
     GstAudioInfo info;
     gst_audio_info_from_caps(&info, caps);
-    int frames = gst_buffer_get_size(buffer) / info.bpf;
-
-    // Check the first audio channel. The buffer is supposed to store
-    // data of a single channel anyway.
     switch (GST_AUDIO_INFO_POSITION(&info, 0)) {
     case GST_AUDIO_CHANNEL_POSITION_FRONT_LEFT:
     case GST_AUDIO_CHANNEL_POSITION_MONO:
-        gst_buffer_list_add(m_frontLeftBuffers.get(), gst_buffer_ref(buffer));
-        m_channelSize += frames;
+        channelId = AudioBus::ChannelLeft;
         break;
     case GST_AUDIO_CHANNEL_POSITION_FRONT_RIGHT:
-        gst_buffer_list_add(m_frontRightBuffers.get(), gst_buffer_ref(buffer));
+        channelId = AudioBus::ChannelRight;
+        break;
+    case GST_AUDIO_CHANNEL_POSITION_LFE1:
+        channelId = AudioBus::ChannelLFE;
+        break;
+    case GST_AUDIO_CHANNEL_POSITION_FRONT_CENTER:
+        channelId = AudioBus::ChannelCenter;
+        break;
+    case GST_AUDIO_CHANNEL_POSITION_SURROUND_LEFT:
+    case GST_AUDIO_CHANNEL_POSITION_REAR_LEFT:
+        channelId = AudioBus::ChannelSurroundLeft;
+        break;
+    case GST_AUDIO_CHANNEL_POSITION_SURROUND_RIGHT:
+    case GST_AUDIO_CHANNEL_POSITION_REAR_RIGHT:
+        channelId = AudioBus::ChannelSurroundRight;
         break;
     default:
-        break;
-    }
+        GST_WARNING("Unhandled channel: %d", GST_AUDIO_INFO_POSITION(&info, 0));
+        return GST_FLOW_ERROR;
+    };
 
+    channelId++;
+    if (channelId == 1)
+        m_channelSize += gst_buffer_get_size(buffer) / info.bpf;
+
+    auto result = m_buffers.ensure(channelId, [] {
+        return adoptGRef(gst_buffer_list_new());
+    });
+    auto& bufferList = result.iterator->value;
+    ASSERT(gst_buffer_list_is_writable(bufferList.get()));
+    gst_buffer_list_add(bufferList.get(), gst_buffer_ref(buffer));
     return GST_FLOW_OK;
 }
 
@@ -198,6 +227,22 @@ void AudioFileReader::handleMessage(GstMessage* message)
         gst_element_set_state(m_pipeline.get(), GST_STATE_NULL);
         m_runLoop.stop();
         break;
+    case GST_MESSAGE_STATE_CHANGED:
+        if (GST_MESSAGE_SRC(message) == GST_OBJECT(m_pipeline.get())) {
+            GstState oldState, newState, pending;
+            gst_message_parse_state_changed(message, &oldState, &newState, &pending);
+
+            GST_INFO_OBJECT(m_pipeline.get(), "State changed (old: %s, new: %s, pending: %s)",
+                gst_element_state_get_name(oldState),
+                gst_element_state_get_name(newState),
+                gst_element_state_get_name(pending));
+
+            WTF::String dotFileName = makeString(GST_OBJECT_NAME(m_pipeline.get()), '_',
+                gst_element_state_get_name(oldState), '_',
+                gst_element_state_get_name(newState));
+
+            GST_DEBUG_BIN_TO_DOT_FILE_WITH_TS(GST_BIN_CAST(m_pipeline.get()), GST_DEBUG_GRAPH_SHOW_ALL, dotFileName.utf8().data());
+        }
     default:
         break;
     }
@@ -208,9 +253,10 @@ void AudioFileReader::handleNewDeinterleavePad(GstPad* pad)
     // A new pad for a planar channel was added in deinterleave. Plug
     // in an appsink so we can pull the data from each
     // channel. Pipeline looks like:
-    // ... deinterleave ! queue ! appsink.
-    GstElement* queue = gst_element_factory_make("queue", nullptr);
+    // ... deinterleave ! appsink.
     GstElement* sink = gst_element_factory_make("appsink", nullptr);
+
+    m_channels++;
 
     static GstAppSinkCallbacks callbacks = {
         nullptr, // eos
@@ -223,16 +269,13 @@ void AudioFileReader::handleNewDeinterleavePad(GstPad* pad)
     };
     gst_app_sink_set_callbacks(GST_APP_SINK(sink), &callbacks, this, nullptr);
 
-    g_object_set(sink, "sync", FALSE, nullptr);
+    g_object_set(sink, "sync", FALSE, "async", FALSE, "enable-last-sample", FALSE, nullptr);
 
-    gst_bin_add_many(GST_BIN(m_pipeline.get()), queue, sink, nullptr);
+    gst_bin_add(GST_BIN_CAST(m_pipeline.get()), sink);
 
-    GRefPtr<GstPad> sinkPad = adoptGRef(gst_element_get_static_pad(queue, "sink"));
+    auto sinkPad = adoptGRef(gst_element_get_static_pad(sink, "sink"));
     gst_pad_link_full(pad, sinkPad.get(), GST_PAD_LINK_CHECK_NOTHING);
 
-    gst_element_link_pads_full(queue, "src", sink, "sink", GST_PAD_LINK_CHECK_NOTHING);
-
-    gst_element_sync_state_with_parent(queue);
     gst_element_sync_state_with_parent(sink);
 }
 
@@ -249,6 +292,10 @@ void AudioFileReader::plugDeinterleave(GstPad* pad)
     if (m_deInterleave)
         return;
 
+    auto padCaps = adoptGRef(gst_pad_query_caps(pad, nullptr));
+    if (!doCapsHaveType(padCaps.get(), "audio/x-raw"))
+        return;
+
     // A decodebin pad was added, plug in a deinterleave element to
     // separate each planar channel. Sub pipeline looks like
     // ... decodebin2 ! audioconvert ! audioresample ! capsfilter ! deinterleave.
@@ -261,16 +308,13 @@ void AudioFileReader::plugDeinterleave(GstPad* pad)
     g_signal_connect_swapped(m_deInterleave.get(), "pad-added", G_CALLBACK(deinterleavePadAddedCallback), this);
     g_signal_connect_swapped(m_deInterleave.get(), "no-more-pads", G_CALLBACK(deinterleaveReadyCallback), this);
 
-    GRefPtr<GstCaps> caps = adoptGRef(gst_caps_new_simple("audio/x-raw",
-        "rate", G_TYPE_INT, static_cast<int>(m_sampleRate),
-        "channels", G_TYPE_INT, m_channels,
-        "format", G_TYPE_STRING, GST_AUDIO_NE(F32),
-        "layout", G_TYPE_STRING, "interleaved", nullptr));
+    auto caps = adoptGRef(gst_caps_new_simple("audio/x-raw", "rate", G_TYPE_INT, static_cast<int>(m_sampleRate),
+        "format", G_TYPE_STRING, GST_AUDIO_NE(F32), "layout", G_TYPE_STRING, "interleaved", nullptr));
     g_object_set(capsFilter, "caps", caps.get(), nullptr);
 
     gst_bin_add_many(GST_BIN(m_pipeline.get()), audioConvert, audioResample, capsFilter, m_deInterleave.get(), nullptr);
 
-    GRefPtr<GstPad> sinkPad = adoptGRef(gst_element_get_static_pad(audioConvert, "sink"));
+    auto sinkPad = adoptGRef(gst_element_get_static_pad(audioConvert, "sink"));
     gst_pad_link_full(pad, sinkPad.get(), GST_PAD_LINK_CHECK_NOTHING);
 
     gst_element_link_pads_full(audioConvert, "src", audioResample, "sink", GST_PAD_LINK_CHECK_NOTHING);
@@ -287,9 +331,10 @@ void AudioFileReader::decodeAudioForBusCreation()
 {
     ASSERT(&m_runLoop == &RunLoop::current());
 
-    // Build the pipeline (giostreamsrc | filesrc) ! decodebin2
+    // Build the pipeline (giostreamsrc | filesrc) ! decodebin
     // A deinterleave element is added once a src pad becomes available in decodebin.
-    m_pipeline = gst_pipeline_new(nullptr);
+    static Atomic<uint32_t> pipelineId;
+    m_pipeline = gst_pipeline_new(makeString("audio-file-reader-", pipelineId.exchangeAdd(1)).ascii().data());
 
     GRefPtr<GstBus> bus = adoptGRef(gst_pipeline_get_bus(GST_PIPELINE(m_pipeline.get())));
     ASSERT(bus);
@@ -336,51 +381,59 @@ void AudioFileReader::decodeAudioForBusCreation()
 
 RefPtr<AudioBus> AudioFileReader::createBus(float sampleRate, bool mixToMono)
 {
+    GST_DEBUG("Scheduling audio decoding task, sampleRate: %f, mixToMono: %s", sampleRate, boolForPrinting(mixToMono));
     m_sampleRate = sampleRate;
-    m_channels = mixToMono ? 1 : 2;
-
-    m_frontLeftBuffers = adoptGRef(gst_buffer_list_new());
-    m_frontRightBuffers = adoptGRef(gst_buffer_list_new());
 
     // Start the pipeline processing just after the loop is started.
-    m_runLoop.dispatch([this] { decodeAudioForBusCreation(); });
+    m_runLoop.dispatch([this] {
+        decodeAudioForBusCreation();
+    });
     m_runLoop.run();
 
     // Set pipeline to GST_STATE_NULL state here already ASAP to
     // release any resources that might still be used.
     gst_element_set_state(m_pipeline.get(), GST_STATE_NULL);
 
-    if (m_errorOccurred)
+    if (m_errorOccurred) {
+        m_buffers.clear();
         return nullptr;
+    }
 
+    GST_DEBUG("Decoding done, transfering data to audio bus containing %d channels, each with %u frames", m_channels, m_channelSize);
     auto audioBus = AudioBus::create(m_channels, m_channelSize, true);
     audioBus->setSampleRate(m_sampleRate);
 
-    copyGstreamerBuffersToAudioChannel(m_frontLeftBuffers.get(), audioBus->channel(0));
-    if (!mixToMono)
-        copyGstreamerBuffersToAudioChannel(m_frontRightBuffers.get(), audioBus->channel(1));
+    for (auto& it : m_buffers)
+        copyGstreamerBuffersToAudioChannel(it.value, audioBus->channel(it.key - 1));
+    m_buffers.clear();
 
+    if (mixToMono)
+        return AudioBus::createByMixingToMono(audioBus.get());
     return audioBus;
 }
 
 RefPtr<AudioBus> createBusFromAudioFile(const char* filePath, bool mixToMono, float sampleRate)
 {
-    RefPtr<AudioBus> returnValue;
-    auto thread = Thread::create("AudioFileReader", [&returnValue, filePath, mixToMono, sampleRate] {
-        returnValue = AudioFileReader(filePath).createBus(sampleRate, mixToMono);
+    initializeDebugCategory();
+    GST_DEBUG("Creating bus from file %s", filePath);
+    RefPtr<AudioBus> bus;
+    auto thread = Thread::create("AudioFileReader", [&bus, filePath, mixToMono, sampleRate] {
+        bus = AudioFileReader(filePath).createBus(sampleRate, mixToMono);
     });
     thread->waitForCompletion();
-    return returnValue;
+    return bus;
 }
 
 RefPtr<AudioBus> createBusFromInMemoryAudioFile(const void* data, size_t dataSize, bool mixToMono, float sampleRate)
 {
-    RefPtr<AudioBus> returnValue;
-    auto thread = Thread::create("AudioFileReader", [&returnValue, data, dataSize, mixToMono, sampleRate] {
-        returnValue = AudioFileReader(data, dataSize).createBus(sampleRate, mixToMono);
+    initializeDebugCategory();
+    GST_DEBUG("Creating bus from in-memory audio data (%zu bytes)", dataSize);
+    RefPtr<AudioBus> bus;
+    auto thread = Thread::create("AudioFileReader", [&bus, data, dataSize, mixToMono, sampleRate] {
+        bus = AudioFileReader(data, dataSize).createBus(sampleRate, mixToMono);
     });
     thread->waitForCompletion();
-    return returnValue;
+    return bus;
 }
 
 } // WebCore
